configurando o bd do sistema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=JdbcCursorReader
+spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/spring_batch
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+app.datasource.jdbcUrl=rl=jdbc:postgresql://localhost:5432/app
+app.datasource.username=postgres
+app.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.batch.jdbc.initialize-schema=always
