configurando 2 bancos pra o projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+# Datasource para spring_batch
 spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/spring_batch
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-app.datasource.jdbcUrl=rl=jdbc:postgresql://localhost:5432/app
+# Datasource para app
+app.datasource.jdbcUrl=jdbc:postgresql://localhost:5434/app
 app.datasource.username=postgres
 app.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.batch.jdbc.initialize-schema=always
+#spring.batch.jdbc.initialize-schema=always
